[package]
name = "subtensor-precompiles"
version = "0.1.0"
edition.workspace = true
authors = ["Opentensor Foundation <https://github.com/opentensor/>"]
homepage = "https://opentensor.ai/"
publish = false
repository = "https://github.com/opentensor/subtensor/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# codec.workspace = true
ed25519-dalek = { workspace = true, features = ["alloc"] }
fp-evm.workspace = true
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
pallet-balances.workspace = true
pallet-evm.workspace = true
pallet-evm-precompile-dispatch.workspace = true
pallet-evm-precompile-modexp.workspace = true
pallet-evm-precompile-sha3fips.workspace = true
pallet-evm-precompile-simple.workspace = true
pallet-evm-precompile-bn128.workspace = true
pallet-subtensor-proxy.workspace = true
precompile-utils.workspace = true
scale-info.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
subtensor-runtime-common.workspace = true
substrate-fixed.workspace = true
pallet-subtensor.workspace = true
pallet-subtensor-swap.workspace = true
pallet-admin-utils.workspace = true
subtensor-swap-interface.workspace = true
pallet-crowdloan.workspace = true
pallet-shield.workspace = true
pallet-drand.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
	# "codec/std",
	"ed25519-dalek/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-admin-utils/std",
	"pallet-balances/std",
	"pallet-crowdloan/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm/std",
	"pallet-subtensor-proxy/std",
	"pallet-subtensor-swap/std",
	"pallet-subtensor/std",
	"pallet-shield/std",
	"pallet-drand/std",
	"precompile-utils/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"substrate-fixed/std",
	"subtensor-runtime-common/std",
	"subtensor-swap-interface/std",
]
