[workspace]

[package]
name = "bittensor"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
serde = { version = "1.0.228", default-features = false }
[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "serde/std",
]

ink-as-dependency = []
e2e-tests = []
